# django_upload_with_base64

./: .gitignore  convert_image_to_base64_and_upload.py  manage.py  pyproject.toml
django_upload_with_base64/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: serializers.py  urls.py  views.py
